--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "cocktail-mixer",
+  "private": true,
   "version": "1.0.0",
+  "homepage": "https://AkuVolts.github.io/Cocktail-Mixer",
   "description": "just a small project to study for my bartending class",
   "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +18,5 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "vite": "^7.3.1"
-  },
-  "devDependencies": {
-    "gh-pages": "^6.3.0"
   }
 }
